--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 Servers/
 prjSemi/.settings/
 .metadata/
+prjSemi/src/main/webapp/WEB-INF/lib/mybatis-3.5.16.jar
+prjSemi/src/main/webapp/WEB-INF/lib/ojdbc11.jar
