프론트 코드 업로드

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ prjSemi/.settings/
 .classpath
 prjSemi/src/main/webapp/WEB-INF/classes/
 prjSemi/src/main/webapp/WEB-INF/lib/
+*.gitignore
+*.project
